Logo and content

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
   </div>
 
   <!--!  Loader  -->
-  <div class="preloader">
+  <!-- <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
       data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca6c9402eb59d_data.json"
       data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="4.6"
       data-duration="0" data-ix2-initial-state="0"></div>
-  </div>
+  </div> -->
 
 
   <div style="opacity: 0" class="parent">
