--- a/skills.html
+++ b/skills.html
@@ -17,9 +17,9 @@
   <link href="assets/sk-aero-logo.png" rel="shortcut icon" type="image/x-icon" />
 
   <!--! Styles -->
-  <link rel="stylesheet" href="styles/index/primary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/index/secondary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/index/media.css" type="text/css" />
+  <link rel="stylesheet" href="styles/primary.css" type="text/css" />
+  <link rel="stylesheet" href="styles/secondary.css" type="text/css" />
+  <link rel="stylesheet" href="styles/media.css" type="text/css" />
 </head>
 
 <body>
@@ -96,7 +96,7 @@
           <div class="nav__logo">
             <a href="index.html" class="logo-link w-inline-block">
               <div class="nav__logo-svg w-embed">
-                <img src="assets/logo-new-750.png" alt="IamJunrey Logo">
+                <img src="assets/jrydev-logo.png" alt="IamJunrey Logo">
               </div>
             </a>
           </div>
@@ -420,13 +420,13 @@
     </footer>
   </div>
 
-  <div class="preloader">
+  <!-- <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
       data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca6c9402eb59d_data.json"
       data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="4.6"
       data-duration="0" data-ix2-initial-state="0"></div>
-  </div>
+  </div> -->
 
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <script src="scripts/index.js"></script>
