--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
   <title>Projects - JryDev</title>
 
   <!--! Styles -->
-  <link rel="stylesheet" href="styles/index/primary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/index/secondary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/index/media.css" type="text/css" />
+  <link rel="stylesheet" href="styles/primary.css" type="text/css" />
+  <link rel="stylesheet" href="styles/secondary.css" type="text/css" />
+  <link rel="stylesheet" href="styles/media.css" type="text/css" />
 
   <style>
     @media (min-width:992px) {
@@ -75,7 +75,6 @@
       }
     }
   </style>
-  <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link
@@ -270,7 +269,7 @@
           <div class="nav__logo">
             <a href="index.html" class="logo-link w-inline-block">
               <div class="nav__logo-svg w-embed">
-                <img src="assets/logo-new-750.png" alt="IamJunrey Logo">
+                <img src="assets/jrydev-logo.png" alt="IamJunrey Logo">
               </div>
             </a>
           </div>
