--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website" />
 
   <!--!  Favicon  -->
-  <link href="assets/sk-aero-logo.png" rel="shortcut icon" type="image/x-icon" />
+  <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
 
   <!--! Styles -->
   <link rel="stylesheet" href="styles/primary.css" type="text/css" />
