--- a/projects.html
+++ b/projects.html
@@ -13,157 +13,9 @@
   <link rel="stylesheet" href="styles/secondary.css" type="text/css" />
   <link rel="stylesheet" href="styles/media.css" type="text/css" />
 
-  <style>
-    @media (min-width:992px) {
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="27b01358-0abd-1488-3320-f09fd8e0208e"] {
-        -webkit-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -moz-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -ms-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-      }
+  <!--! Favicon -->
+  <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
 
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="06ccc622-33fd-1008-f811-f4e8f6ed47bf"] {
-        width: 100%;
-        height: 0%;
-      }
-
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="ad588d48-18eb-dcaa-0895-7599fff0d36b"] {
-        -webkit-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -moz-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -ms-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-      }
-
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="1143bef9-45e0-bade-4955-228b0ecb15bb"] {
-        -webkit-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -moz-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -ms-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-      }
-
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="2e16e3be-ad3d-95ee-6241-57640f0a4e39"] {
-        width: 100%;
-        height: 0%;
-      }
-
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="ad588d48-18eb-dcaa-0895-7599fff0d34e"] {
-        -webkit-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -moz-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -ms-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-      }
-    }
-
-    @media (max-width:991px) and (min-width:768px) {
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="27b01358-0abd-1488-3320-f09fd8e0208e"] {
-        -webkit-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -moz-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -ms-transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        transform: translate3d(0, 100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-      }
-
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="06ccc622-33fd-1008-f811-f4e8f6ed47bf"] {
-        width: 100%;
-        height: 0%;
-      }
-
-      html.w-mod-js:not(.w-mod-ix) [data-w-id="ad588d48-18eb-dcaa-0895-7599fff0d36b"] {
-        -webkit-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -moz-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        -ms-transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-        transform: translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-      }
-    }
-  </style>
-  <script
-    type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link
-    href="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca654932eb5b0_favicon-apex-transformations.png"
-    rel="shortcut icon" type="image/x-icon" />
-  <link
-    href="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca68c282eb5a7_webclip-apex-transformations.png"
-    rel="apple-touch-icon" />
-  <style>
-    ::selection {
-      background: #E8E8E8;
-      color: #121212;
-      text-shadow: none;
-    }
-
-    .overflow-h {
-      overflow: hidden
-    }
-  </style>
-  <style>
-    /* width */
-    ::-webkit-scrollbar {
-      width: 0px;
-    }
-
-    /* Track */
-    ::-webkit-scrollbar-track {
-      background: #FFF;
-    }
-
-    /* Handle */
-    ::-webkit-scrollbar-thumb {
-      background: #888;
-    }
-
-    /* Handle on hover */
-    ::-webkit-scrollbar-thumb:hover {
-      background: #555;
-    }
-
-
-    body {
-      -webkit-font-smoothing: antialiased;
-    }
-
-    body {
-      overflow: -moz-scrollbars-none;
-      -ms-overflow-style: none;
-    }
-
-    :root {
-      scrollbar-width: none !important;
-    }
-
-
-    body {
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-
-    .hide-scrollbar {
-      overflow: auto;
-      -ms-overflow-style: none;
-      /* IE 11 */
-      scrollbar-width: none;
-      /* Firefox 64 */
-    }
-
-    /* Remove inner shadow from inputs on mobile iOS */
-    textarea,
-    input[type="text"] {
-      -webkit-appearance: none;
-    }
-  </style>
-
-  <style>
-    ::selection {
-      background: #E8E8E8;
-      color: #121212;
-      text-shadow: none;
-    }
-  </style>
-
-  <style>
-    html,
-    body {
-      overscroll-behavior: none;
-    }
-  </style>
 </head>
 
 <body>
