--- a/skills.html
+++ b/skills.html
@@ -146,17 +146,13 @@
           </div>
           <div data-w-id="5e309195-a248-e2e1-36e4-00bc236e2558" class="timeline_item">
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e2559-72f284e2" class="timeline_left">
-              <div class="timeline_date-text">JavaScript & TypeScript<br /></div>
+              <div class="timeline_date-text">TypeScript<br /></div>
             </div>
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e255c-72f284e2" class="timeline_centre">
               <div class="timeline_circle"></div>
             </div>
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e255e-72f284e2" class="timeline_right">
-              <div class="timeline_text">JavaScript, often abbreviated JS, is a programming language that is one of the
-                core technologies of the World Wide Web, alongside HTML and CSS. As of 2022, 98% of websites use
-                JavaScript on the client side for web page behavior, often incorporating third-party libraries,
-                TypeScript is a strongly typed programming language that builds on JavaScript,
-                giving you better tooling at any scale.<br />
+              <div class="timeline_text">I use TypeScript as my primary programming language and my favorite one, it adds an explicit type system to JavaScript allowing me for the strict enforcement of variable types, it also provide excellent intellisense and code completion as well.
               </div>
               <div class="timeline_image-wrapper">
                 <div class="timeline__icon w-embed">
@@ -216,25 +212,18 @@
               </div>
             </div>
           </div>
+
           <div data-w-id="5e309195-a248-e2e1-36e4-00bc236e2591" class="timeline_item">
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e2592-72f284e2" class="timeline_left">
-              <div class="timeline_date-text">Styled-Components & Tailwind CSS<br /></div>
+              <div class="timeline_date-text">Styled-Components<br /></div>
             </div>
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e2595-72f284e2" class="timeline_centre">
               <div class="timeline_circle"></div>
             </div>
             <div class="timeline_right">
-              <div class="timeline_text">Tailwind is a utility-first CSS framework for rapidly building custom designs.
-                It can be used alone to style React Apps. However, it can be better combined with Styled Components.
-                That combination brings the magic of Tailwind into CSS-in-JS.<br /></div>
+              <div class="timeline_text">Styled-components utilises tagged template literals to style your components, It removes the mapping between components and styles, when you're defining your styles, you're actually creating a normal React component, that has your styles attached to it.<br /></div>
               <div class="timeline_image-wrapper">
                 <div class="timeline__icon w-embed">
-                  <svg class="skill-icons" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em"
-                    height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                    <path fill="currentColor"
-                      d="M12.001 4.8c-3.2 0-5.2 1.6-6 4.8c1.2-1.6 2.6-2.2 4.2-1.8c.913.228 1.565.89 2.288 1.624C13.666 10.618 15.027 12 18.001 12c3.2 0 5.2-1.6 6-4.8c-1.2 1.6-2.6 2.2-4.2 1.8c-.913-.228-1.565-.89-2.288-1.624C16.337 6.182 14.976 4.8 12.001 4.8zm-6 7.2c-3.2 0-5.2 1.6-6 4.8c1.2-1.6 2.6-2.2 4.2-1.8c.913.228 1.565.89 2.288 1.624c1.177 1.194 2.538 2.576 5.512 2.576c3.2 0 5.2-1.6 6-4.8c-1.2 1.6-2.6 2.2-4.2 1.8c-.913-.228-1.565-.89-2.288-1.624C10.337 13.382 8.976 12 6.001 12z" />
-                  </svg>
-
                   <svg class="skill-icons" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em"
                     height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                     <path fill="currentColor"
@@ -244,6 +233,28 @@
               </div>
             </div>
           </div>
+
+          <div data-w-id="5e309195-a248-e2e1-36e4-00bc236e25ca" class="timeline_item">
+            <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e25cb-72f284e2" class="timeline_left">
+              <div class="timeline_date-text">Tailwind CSS<br /></div>
+            </div>
+            <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e25ce-72f284e2" class="timeline_centre">
+              <div class="timeline_circle"></div>
+            </div>
+            <div class="timeline_right">
+              <p class="timeline_text">Tailwind CSS is basically a utility-first CSS framework for rapidly building custom user interfaces. It is a highly customizable, low-level CSS framework that gives you all of the building blocks you need to build bespoke designs without any annoying opinionated styles you have to fight to override.<br /></p>
+              <div class="timeline_image-wrapper">
+                <div class="timeline__icon w-embed">
+                  <svg class="skill-icons" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em"
+                    height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
+                    <path fill="currentColor"
+                      d="M12.001 4.8c-3.2 0-5.2 1.6-6 4.8c1.2-1.6 2.6-2.2 4.2-1.8c.913.228 1.565.89 2.288 1.624C13.666 10.618 15.027 12 18.001 12c3.2 0 5.2-1.6 6-4.8c-1.2 1.6-2.6 2.2-4.2 1.8c-.913-.228-1.565-.89-2.288-1.624C16.337 6.182 14.976 4.8 12.001 4.8zm-6 7.2c-3.2 0-5.2 1.6-6 4.8c1.2-1.6 2.6-2.2 4.2-1.8c.913.228 1.565.89 2.288 1.624c1.177 1.194 2.538 2.576 5.512 2.576c3.2 0 5.2-1.6 6-4.8c-1.2 1.6-2.6 2.2-4.2 1.8c-.913-.228-1.565-.89-2.288-1.624C10.337 13.382 8.976 12 6.001 12z" />
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div data-w-id="5e309195-a248-e2e1-36e4-00bc236e25ad" class="timeline_item">
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e25ae-72f284e2" class="timeline_left">
               <div class="timeline_date-text">Node . js & Express . js<br /></div>
@@ -272,6 +283,7 @@
               </div>
             </div>
           </div>
+
           <div data-w-id="5e309195-a248-e2e1-36e4-00bc236e25ca" class="timeline_item">
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e25cb-72f284e2" class="timeline_left">
               <div class="timeline_date-text">Apollo Graph QL<br /></div>
@@ -303,6 +315,7 @@
               </div>
             </div>
           </div>
+
           <div data-w-id="5e309195-a248-e2e1-36e4-00bc236e25e8" class="timeline_item">
             <div id="w-node-_5e309195-a248-e2e1-36e4-00bc236e25e9-72f284e2" class="timeline_left">
               <div class="timeline_date-text">PostgreSQL & MongoDB<br /></div>
