Adjusted nav and footer

--- a/index.html
+++ b/index.html
@@ -162,31 +162,22 @@
     <section class="section projects">
       <div data-w-id="1c687701-b616-479c-1acd-a33df98627b9" class="scroll-section-imgs">
         <div class="overflow-hidden-div mb">
-          <h2 data-w-id="842bcb5f-a778-e049-1029-40612678455d" style="
-                -webkit-transform: translate3d(0, -100%, 0) scale3d(1, 1, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -moz-transform: translate3d(0, -100%, 0) scale3d(1, 1, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -ms-transform: translate3d(0, -100%, 0) scale3d(1, 1, 1)
-                  rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                transform: translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0)
-                  rotateY(0) rotateZ(0) skew(0, 0);
-              " class="project__heading">
+          <h2 data-w-id="842bcb5f-a778-e049-1029-40612678455d" class="project__heading">
             Projects
           </h2>
         </div>
 
         <div class="project-scroll">
           <div class="project-scroll-image">
-            <img src="assets/code3.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+            <img src="assets/code3.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
               alt="Kitchen an elegant one" class="project__img" />
           </div>
           <div class="project-scroll-image">
-            <img src="assets/code2.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+            <img src="assets/code2.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
               alt="Beautiful sala or living room" class="project__img" />
           </div>
           <div class="project-scroll-image">
-            <img src="assets/code1.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+            <img src="assets/code1.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
               alt="Luxury bathroom with black marble floor and white marble wall" class="project__img" />
           </div>
         </div>
@@ -212,7 +203,7 @@
                   <path fill="currentColor"
                     d="M3 2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V2zm6 11a1 1 0 1 0-2 0a1 1 0 0 0 2 0z" />
                 </svg>
-                : +639-xxx-xxx-xxx
+                <span class="footer-link">: +639-xxx-xxx-xxx</span>
               </a>
               <a class="footer__link-item mb">
                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2rem" height="2rem"
@@ -224,7 +215,7 @@
                     class="clr-i-solid clr-i-solid-path-2" />
                   <path fill="none" d="M0 0h36v36H0z" />
                 </svg>
-                : jrydev404@gmail.com
+                <span class="footer-link">: jrydev404@gmail.com</span>
               </a>
             </div>
           </div>
