purify css landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-domain="www.jrydev.codes" data-wf-page="61fb6d3ce15a91876ef284d5" data-wf-site="61ec1a21c49ca64c3e2eb550"
+<html data-wf-domain="www.jrydev.me" data-wf-page="61fb6d3ce15a91876ef284d5" data-wf-site="61ec1a21c49ca64c3e2eb550"
   data-wf-page="61fb74a44e43de538d68bcbe" data-wf-site="61ec1a21c49ca64c3e2eb550">
 <head>
   <meta charset="utf-8" />
@@ -7,12 +7,17 @@
   <meta property="og:type" content="website" />
   <title>Jrydev</title>
   <!--!  Description  -->
-  <meta content="www.jrydev.codes" property="og:title" />
-  <meta content="Wazzup mananap yow yow break it down yow!" name="description" property="og:description" />
+  <meta content="www.jrydev.me" property="og:title" />
+  <meta content="Hello world! I am Junrey Lañas, a 22 years old aspiring dev..." name="description" property="og:description" />
   <!--! Styles -->
-  <link rel="stylesheet" href="styles/primary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/secondary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/media.css" type="text/css" />
+  <link rel="stylesheet" href="styles/main.css" type="text/css">
+  <link rel="stylesheet" href="styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="styles/responsive.css" type="text/css">
+
+  <!-- <link rel="stylesheet" href="styles/primary.css" type="text/css" /> -->
+  <!-- <link rel="stylesheet" href="styles/secondary.css" type="text/css" /> -->
+  <!-- <link rel="stylesheet" href="styles/media.css" type="text/css" /> -->
+  
   <!--!  Favicon  -->
   <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
 </head>
