--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,9 @@
   <meta property="og:type" content="website" />
   <title>Projects - JryDev</title>
   <!--! Styles -->
-  <link rel="stylesheet" href="styles/primary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/secondary.css" type="text/css" />
-  <link rel="stylesheet" href="styles/media.css" type="text/css" />
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/responsive.css">
   <!--! Favicon -->
   <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
 </head>
