--- a/skills.html
+++ b/skills.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-domain="www.jrydev.codes" data-wf-page="61fb6d3ce15a91876ef284d5" data-wf-site="61ec1a21c49ca64c3e2eb550"
+<html data-wf-domain="www.jrydev.me" data-wf-page="61fb6d3ce15a91876ef284d5" data-wf-site="61ec1a21c49ca64c3e2eb550"
   data-wf-page="61fb74a44e43de538d68bcbe" data-wf-site="61ec1a21c49ca64c3e2eb550">
 
 <head>
@@ -8,15 +8,17 @@
   <meta property="og:type" content="website" />
   <title>Skills - Jrydev</title>
   <!--!  Description  -->
-  <meta content="Skills - jrydev.codes" property="og:title" />
-  <meta content="Wazzup mananap yow yow break it down yow!" name="description" property="og:description" />
   <meta property="og:type" content="website" />
   <!--!  Favicon  -->
   <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
+
   <!--! Styles -->
   <link rel="stylesheet" href="styles/primary.css" type="text/css" />
   <link rel="stylesheet" href="styles/secondary.css" type="text/css" />
   <link rel="stylesheet" href="styles/media.css" type="text/css" />
+
+
+  
 </head>
 <body>
   <div class="fullpage-menu">
