purify css skills page

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <meta content="www.jrydev.me" property="og:title" />
   <meta content="Hello world! I am Junrey Lañas, a 22 years old aspiring dev..." name="description" property="og:description" />
   <!--! Styles -->
-  <link rel="stylesheet" href="styles/main.css" type="text/css">
-  <link rel="stylesheet" href="styles/styles.css" type="text/css">
-  <link rel="stylesheet" href="styles/responsive.css" type="text/css">
+  <link rel="stylesheet" href="styles/home/main.css" type="text/css">
+  <link rel="stylesheet" href="styles/home/styles.css" type="text/css">
+  <link rel="stylesheet" href="styles/home/responsive.css" type="text/css">
 
   <!-- <link rel="stylesheet" href="styles/primary.css" type="text/css" /> -->
   <!-- <link rel="stylesheet" href="styles/secondary.css" type="text/css" /> -->
   <!-- <link rel="stylesheet" href="styles/media.css" type="text/css" /> -->
-  
+
   <!--!  Favicon  -->
   <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
 </head>
