styles and fonst updated

--- a/skills.html
+++ b/skills.html
@@ -12,9 +12,9 @@
   <!--!  Favicon  -->
   <link href="assets/jrydev-logo.png" rel="shortcut icon" type="image/x-icon" />
   <!--! Styles -->
-  <link rel="stylesheet" href="styles/skills/style1.css" type="text/css">
-  <link rel="stylesheet" href="styles/skills/style2.css" type="text/css">
-  <link rel="stylesheet" href="styles/skills/style3.css" type="text/css">
+  <link rel="stylesheet" href="styles/primary.css" type="text/css">
+  <link rel="stylesheet" href="styles/secondary.css" type="text/css">
+  <link rel="stylesheet" href="styles/media.css" type="text/css">
   
 </head>
 <body>
