--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
 
         <div class="project-scroll">
           <div class="project-scroll-image">
-            <img src="assets/code2.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
-              alt="Kitchen an elegant one" class="project__img" />
+            <img src="assets/project-pic-code1.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+              alt="Codes in jQuery" class="project__img" />
           </div>
           <div class="project-scroll-image">
-            <img src="assets/code3.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
-              alt="Beautiful sala or living room" class="project__img" />
+            <img src="assets/project-pic-code2.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+              alt="Laptop with codes on screen" class="project__img" />
           </div>
           <div class="project-scroll-image">
-            <img src="assets/code1.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
-              alt="Luxury bathroom with black marble floor and white marble wall" class="project__img" />
+            <img src="assets/project-pic-code3.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+              alt="Guy wearing headset while coding" class="project__img" />
           </div>
         </div>
       </div>
