Code cleanup landing

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="nav__logo">
             <a href="index.html" aria-current="page" class="logo-link w-inline-block w--current">
               <div class="nav__logo-svg w-embed">
-                <img src="assets/jrydev-logo.png" alt="IamJunrey Logo">
+                <img src="assets/jrydev-logo.png" alt="jrydev official logo">
               </div>
             </a>
           </div>
@@ -131,20 +131,18 @@
               <h2
                 style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
                 class="heading-white name-heading">Junrey Lañas</h2>
-
               <h2
                 style="opacity:0;-webkit-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 1.2em, 0) scale3d(1, 1, 1) rotateX(-100deg) rotateY(0) rotateZ(0) skew(0, 0);transform-style:preserve-3d"
-                class="heading-colored s--2 name-title">Web developer
+                class="heading-colored s--2 name-title">Web Developer
               </h2>
             </div>
             <p class="main-p is--padding">I am Junrey Lañas an aspiring developer/software engineer and a BSIT student
-              from LaSalle University, I’ve always been passionate in coding & programming specially in web development
+              from LaSalle University-Ozamiz, I’ve always been passionate in coding & programming specially in web development
               and been practicing my skill in for the past couple of years now using modern and powerful technologies.
             </p>
             <p class="main-p">I help individuals to expand the scope and grow their business networks to provide more
               sales to their business through delivering a high quality websites with clean ui & elegant feels.
             </p>
-
             <br />
             <a data-w-id="fe84e575-3d24-4892-0a9d-5b14a6bea0a3" href="#footer" target="_blank"
               class="cta-main w-inline-block">
@@ -170,7 +168,7 @@
         <div class="project-scroll">
           <div class="project-scroll-image">
             <img src="assets/project-pic-code1.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
-              alt="Codes in jQuery" class="project__img" />
+              alt="Codes picture in c++" class="project__img" />
           </div>
           <div class="project-scroll-image">
             <img src="assets/project-pic-code2.jpg" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
@@ -185,7 +183,7 @@
       <a data-w-id="a7c1b120-3217-1a6e-480c-806049f96f29" href="projects.html"
         class="outlined-cta projects w-inline-block">
         <div class="btn-cover-outlined"></div>
-        <div class="outlined-cta-text">View Projects</div>
+        <div class="outlined-cta-text">Projects</div>
       </a>
     </section>
 
